Pass test case 35
